Replace special characters in titles and authors

--- a/assets/bibliography/ShaoheWang.bib
+++ b/assets/bibliography/ShaoheWang.bib
@@ -248,7 +248,7 @@ volume = {165},
 year = {2016}
 }
 @article{Quintin2015a,
-author = {Quintin, Sophie and Wang, Shaohe and Pontabry, Julien and Bender, Ambre and Robin, Fran{\c{c}}ois and Hyenne, Vincent and Landmann, Fr{\'{e}}d{\'{e}}ric and Gally, Christelle and Oegema, Karen and Labouesse, Michel},
+author = {Quintin, Sophie and Wang, Shaohe and Pontabry, Julien and Bender, Ambre and Robin, François and Hyenne, Vincent and Landmann, Frédéric and Gally, Christelle and Oegema, Karen and Labouesse, Michel},
 doi = {10.1242/dev.126615},
 file = {:Users/wangs20/Documents/Mendeley Desktop/Quintin et al. - 2016 - Development.pdf:pdf},
 issn = {0950-1991},
@@ -273,7 +273,7 @@ journal = {eLife},
 month = {sep},
 pages = {e08649},
 pmid = {26371552},
-title = {{NOCA-1 functions with $\gamma$-tubulin and in parallel to Patronin to assemble non-centrosomal microtubule arrays in C. elegans}},
+title = {{NOCA-1 functions with γ-tubulin and in parallel to Patronin to assemble non-centrosomal microtubule arrays in C. elegans}},
 url = {https://elifesciences.org/articles/08649},
 volume = {4},
 year = {2015}
